--- a/.babelrc
+++ b/.babelrc
@@ -1,7 +1,3 @@
 {
-  "modules": "umd",
-  "loose": "all",
-  "compact": true,
-  "comments": false,
-  "stage": 0
+  "presets": ["@babel/preset-env"]
 }
