--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,7 +1,7 @@
 {
   "compilerOptions": {
-    "module": "es2015",
-    "target": "es2016",
+    "module": "ESNext",
+    "target": "ESNext",
     "lib": [
       "dom",
       "es2016"
