--- a/package.json
+++ b/package.json
@@ -8,7 +8,7 @@
   "scripts": {
     "build": "babel src --out-dir ./dist --source-maps && npm run build:ts",
     "build:ts": "cp src/decko.d.ts dist/",
-    "test": "eslint {src,tests}/**.js && mocha --compilers js:@babel/register tests/**/*.js",
+    "test": "eslint {src,tests}/**.js && mocha --require @babel/register tests/**/*.js",
     "prepublish": "npm run build",
     "release": "npm run build && git commit -am $npm_package_version && git tag $npm_package_version && git push && git push --tags && npm publish"
   },
@@ -26,6 +26,7 @@
     "@babel/preset-env": "^7.11.5",
     "@babel/register": "^7.11.5",
     "babel-eslint": "^10.1.0",
+    "chai": "^4.2.0",
     "eslint": "^7.8.1",
     "mocha": "^8.1.3",
     "typescript": "^4.0.2"
