--- a/package.json
+++ b/package.json
@@ -1,16 +1,14 @@
 {
   "name": "decko",
   "type": "module",
-  "version": "1.2.1",
+  "version": "1.2.1-esnext",
+  "license": "MIT",
   "main": "dist/decko.js",
   "types": "dist/decko.d.ts",
   "description": "A collection of the most useful property decorators.",
   "scripts": {
-    "build": "babel src --out-dir ./dist --source-maps && npm run build:ts",
-    "build:ts": "cp src/decko.d.ts dist/",
-    "test": "eslint {src,tests}/**.js && mocha --require @babel/register tests/**/*.js",
-    "prepublish": "npm run build",
-    "release": "npm run build && git commit -am $npm_package_version && git tag $npm_package_version && git push && git push --tags && npm publish"
+    "build": "tsc && npm run copy-typings",
+    "copy-typings": "cp src/decko.d.ts dist/"
   },
   "files": [
     "src",
@@ -21,14 +19,6 @@
     "url": "git://github.com/developit/decko.git"
   },
   "devDependencies": {
-    "@babel/cli": "^7.11.6",
-    "@babel/core": "^7.11.6",
-    "@babel/preset-env": "^7.11.5",
-    "@babel/register": "^7.11.5",
-    "babel-eslint": "^10.1.0",
-    "chai": "^4.2.0",
-    "eslint": "^7.8.1",
-    "mocha": "^8.1.3",
-    "typescript": "^4.0.2"
+    "typescript": "3.9.4"
   }
 }
