--- a/tsconfig.json
+++ b/tsconfig.json
@@ -4,21 +4,17 @@
     "target": "ESNext",
     "lib": [
       "dom",
-      "es2016"
+      "es7"
     ],
-    "baseUrl": "./",
-    "noImplicitAny": true,
+    "noImplicitAny": false,
     "experimentalDecorators": true,
-    "sourceMap": false,
+    "sourceMap": true,
     "moduleResolution": "node",
     "strictNullChecks": true,
-    "declaration": true,
-    "noEmit": true,
+    "declaration": false,
     "pretty": true,
-    "outDir": "ts-output"
-  },
-  "include": [
-    "src/decko.d.ts",
-    "tests/index.ts"
-  ]
+    "rootDir": "src",
+    "outDir": "dist",
+    "baseUrl": "."
+  }
 }
